<resources>
    <string name="app_name">rimoto</string>

    <!-- VPN -->
    <string name="notifcation_title">rimoto - %s</string>

    <string name="action_settings">Settings</string>
    <string name="login_btn">Sign up</string>

    <string name="login_title_0">Get Whatsapp, Uber, Waze, and much more for free!</string>
    <string name="login_title_1">Get free access to book accommodations</string>
    <string name="login_title_2">Get free access to book a tour or a show</string>
    <string name="login_title_3">Get free access to reserve a table in a restaurant</string>
    <string name="login_title_4">Get free access to order a taxi</string>
    <string name="tos">By clicking \"sign up\" you accept our <u>terms of use</u>.</string>
    <string name="login_main_title">traveling abroad?</string>
    <string name="connect">connect</string>

    <string name="wizard_title_roaming">check-in</string>
    <string name="wizard_title_vpn">to the clouds</string>
    <string name="wizard_boxa_font">sans-serif-medium</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="main_activity_title">rimoto is on!</string>
    <string name="main_activity_title_preview">almost there..</string>
    <string name="suspension_title">rimoto is suspended</string>
    <string name="actionBtn_topUp">get premium access</string>
    <string name="actionBtn_seePremium">your premium plan</string>
    <string name="activateBtn">activate</string>
    <string name="main_boxa_text">You have <b>free</b> access to:</string>
    <string name="main_boxa_text_preview">Activate to get <b>free</b> mobile data to:</string>
    <string name="permium_boxa_text">You have <b>premium</b> access to:</string>
    <string name="wizard_roaming_settings_text">Make sure your data-roaming is <b>ON</b>, to get your FREE access.</string>
    <string name="action_debug">Debug info</string>
    <string name="local_tag_text">local</string>
    <string name="data_roaming">data roaming</string>
    <string name="on">on</string>
    <string name="wizard_roaming_partner_text">We\'ve partnered with your operator to make sure you won\'t be charged</string>
    <string name="wizard_vpn_magic_text">Our cloud is where we make it FREE.</string>
    <string name="wizard_vpn_connect_text">Connect, and allow us to set up a secure connection with you.</string>
    <string name="suspension_text">and will turn on automatically as soon as you’ll get off the wifi connection.</string>
    <string name="planDetails_daysLeft">days left in your plan</string>
    <string name="oops_title">Oops..</string>
    <string name="connectionFatalError_message">Rimoto is unable to connect to the cloud.\n Please restart your device.</string>
    <string name="send">Send</string>
    <string name="help">help</string>
    <string name="help_title_faq">I have a problem in</string>
    <string name="help_title_category">my problem is..</string>
    <string name="help_title_contact">contact us</string>
    <string name="err_message_required">Message is required....</string>
    <string name="help_support_sent">Thanks, we\'ll back to you shortly.</string>
    <string name="help_support_problem">Sorry, we had a problem sending your message. Please try again later...</string>
</resources>
