<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/pink"
        android:id="@+id/main_title"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/wizard_title_marginBottom"
        android:layout_centerHorizontal="true">
        <net.rimoto.android.views.PacificoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/wizard_vpn_title_textSize"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/wizard_title_vpn"
            android:textColor="@color/simplebg" />
    </LinearLayout>


    <TextView
        android:layout_width="@dimen/wizard_container_width"
        android:layout_height="wrap_content"
        android:textColor="@color/pink"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:fontFamily="@string/wizard_boxa_font"
        android:textStyle="bold"
        android:textSize="@dimen/wizard_textSize"
        android:id="@+id/wizard_vpn_magic_text"
        android:text="@string/wizard_vpn_magic_text"
        tools:ignore="UnusedAttribute"
        android:layout_below="@id/main_title"
        android:layout_marginBottom="27dp"/>
    <TextView
        android:layout_width="@dimen/wizard_container_width"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:fontFamily="@string/wizard_boxa_font"
        android:textStyle="bold"
        android:textSize="@dimen/wizard_textSize"
        android:id="@+id/wizard_vpn_connect_text"
        android:text="@string/wizard_vpn_connect_text"
        tools:ignore="UnusedAttribute"
        android:layout_below="@id/wizard_vpn_magic_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vpn_dialog_mock"
        android:layout_below="@id/wizard_vpn_connect_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

</RelativeLayout>