<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pink_rounded_bg"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/introText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:fontFamily="@string/wizard_boxa_font"
            android:textAllCaps="true"
            android:textSize="@dimen/wizard_textSize"
            android:text="@string/main_boxa_text"
            tools:ignore="UnusedAttribute"
            android:id="@+id/main_boxa_text"/>

    </LinearLayout>

    <!-- Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/orange"
        android:layout_below="@+id/introText"
        android:id="@+id/line1"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tagsRecycler"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/actionBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line1" />

    <net.rimoto.android.views.PacificoButton
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topUpBtn_height"
        android:textSize="@dimen/topUpBtn_textSize"
        android:text="@string/actionBtn_topUp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:id="@+id/actionBtn"
        android:visibility="gone"
        tools:ignore="UnusedAttribute"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@drawable/activate"
        android:layout_centerInParent="true"
        android:id="@+id/activateBtn"
        android:visibility="gone">
        <net.rimoto.android.views.PacificoTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="65sp"
            android:text="@string/activateBtn"
            android:layout_marginTop="5dip"
            android:layout_marginRight="5dip"
            android:visibility="visible"
            android:gravity="center"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</RelativeLayout>
